crates/rig-derive/tests/ui/tool_args/fail_required_option_param.stderr
error: an `Option` parameter cannot be listed in `required(...)`; drop the `Option` or omit it
 --> tests/ui/tool_args/fail_required_option_param.rs:5:24
  |
5 | #[rig_tool(required(a, limit))]
  |                        ^^^^^
